--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-.vscode
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
+node_modules
+*.log*
+.nuxt
+.nitro
+.cache
+.output
 .env
-
-# vercel
+dist
 .vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+.DS_Store
